Dark mode h1 fix

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -752,7 +752,6 @@ blockquote {
     }
 
     article.single {
-        h1 { border: 3px solid lighten($brandColor4, 50%); }
         h2, h3 { color: $brandColor2; }
     }
 
